# EAE_Firmware

./: CMakeLists.txt  EAE_Coding.code-workspace  README.md  readme.txt  run_firmware.sh
app/: cooling_logic.c  main.c
app/include/: cooling_logic.h
components/actuators/: spal_fan.c  wp_pump.c
components/actuators/include/: spal_fan.h  wp_pump.h
components/sensors/: hwtms_temp.c  lmc100_level.c
components/sensors/include/: hwtms_temp.h  lmc100_level.h
components/ui/: f_series_sw.c
components/ui/include/: f_series_sw.h  powerview_450.h
hal/: adc.c  can.c  gpio.c  pwm.c
hal/include/: adc.h  can.h  gpio.h  pwm.h
tests/: test_cli.sh  test_cooling.cpp
